--- a/css/contactus.css
+++ b/css/contactus.css
@@ -1,6 +1,8 @@
 body{
-    background-color: aqua;
-    margin:30px;
+    margin: 0;
+    height: 100vh;
+    width: 100%;
+    background-image: url("../n.jpg");
     display: flex;
     align-items: center;
     justify-content: center;
@@ -10,7 +12,7 @@ body{
 }
 
 .title{
-    color:beige;
+    color:rgb(251, 80, 7);;
     text-align: center;
     font-family: sans-serif;
 
@@ -19,7 +21,7 @@ body{
 
 
 .content{
-    color:azure;
+    color:rgb(251, 80, 7);
     text-align: center;
     
     font-family: sans-serif;
@@ -28,9 +30,10 @@ body{
 }
 
 .displayContent{
-    background-color: rgb(0, 68, 255);
-    width: 100%;
-    height: 85%;
+   opacity: 1;
+   border-radius: 20px;
+   background-color: rgba(255, 255, 255, 0.9);
+    padding: 20px;
     
    
     
